<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="237dp"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@null"
        app:srcCompat="@drawable/screen_shot_2022_10_26_at_4_33_1" />

    <EditText
        android:id="@+id/editTextEmailAddress_signin"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="504dp"
        android:background="@drawable/_rectangle_126_ek1"
        android:ems="10"
        android:hint="@string/email_address_pf"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:inputType="textEmailAddress"
        android:shadowRadius="50"
        android:textColor="#938989" />



    <TextView
        android:id="@+id/textemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="199dp"
        android:text="@string/email_text_signin"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="301dp"
        android:text="@string/password_subtitle"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextTextPassword_signin"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="403dp"
        android:autofillHints="password"
        android:background="@drawable/_rectangle_126_ek1"
        android:drawableEnd="@drawable/blind_ek2"
        android:ems="10"
        android:hint="@string/password_pf"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#938989" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="540dp"
        android:text="@string/or_sign"
        android:textColor="#000000"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/textnoaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="656dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#000000"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/textsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="575dp"
        android:text="@string/sign_in_with"
        android:textColor="#000000"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/textsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="161dp"
        android:layout_marginTop="683dp"
        android:text="@string/sign_up_text"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="145dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="227dp"
        android:background="@android:color/black"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:scaleType="fitXY"
        android:contentDescription="@null"
        android:src="@android:drawable/divider_horizontal_dark" />


    <ImageView
        android:layout_width="193dp"
        android:layout_height="2dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="237dp"
        android:layout_marginBottom="228dp"
        android:background="@android:color/black"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:scaleType="fitXY"
        android:contentDescription="@null"
        android:src="@android:drawable/divider_horizontal_dark" />


    <ImageButton
        android:id="@+id/google2"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="125dp"
        android:background="@null"
        android:contentDescription="@string/google_contentdes"
        app:srcCompat="@drawable/google" />

    <ImageButton
        android:id="@+id/twitter1"
        android:layout_width="61dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="216dp"
        android:layout_marginBottom="121dp"
        android:background="@null"
        android:contentDescription="@string/twitter_contentdes"
        app:srcCompat="@drawable/twitter" />

    <ImageButton
        android:id="@+id/facebook2"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="121dp"
        android:background="@null"
        android:contentDescription="@string/facebook_contentdes"
        app:srcCompat="@drawable/vector_ek1" />

    <Button
        android:id="@+id/buttonsignin"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="303dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="#76B6D5"
        android:text="@string/sign_in_button_text"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-64dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="375dp"
        android:layout_toEndOf="@id/imageView6"
        android:text="@string/forget_password" />
</RelativeLayout>