<?xml version="1.0" encoding="utf-8"?>
   <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >


    <ImageView
        android:id="@+id/imageViewnews2"
        android:layout_width="377dp"
        android:layout_height="283dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/screen_shot_2022_10_27_at_2_43_1" />

    <ImageButton
    android:id="@+id/imageButtoncancelnews2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:contentDescription="@string/cancel"
    android:hint="@string/exit"
    android:layout_marginTop="31dp"
    android:layout_marginEnd="31dp"
    android:background="@null"
    app:srcCompat="@drawable/_cancel" />

        <ScrollView
        android:id="@+id/scrollnews2"
        android:layout_width="wrap_content"
        android:layout_height="411dp"
        android:layout_below="@id/imageViewnews2"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewdate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_news2"
                android:textAppearance="?android:textAppearanceLarge"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description2"
                android:textSize="20sp" />



        </LinearLayout>
        </ScrollView>
    </RelativeLayout>